--- a/web/index.html
+++ b/web/index.html
@@ -96,6 +96,30 @@
       // Service workers not supported. Just drop the <script> tag.
       loadMainDartJs();
     }
+    
+  </script>
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.2/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.6.2/firebase-analytics.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+  
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyAFjNDJivQq6JoQyotR-moFbCFhyFYCiDY",
+      authDomain: "aitu-stores.firebaseapp.com",
+      projectId: "aitu-stores",
+      storageBucket: "aitu-stores.appspot.com",
+      messagingSenderId: "270235269932",
+      appId: "1:270235269932:web:e8b29645f0569b2bc98a89",
+      measurementId: "G-73GLM3XVYR"
+    };
+  
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
   </script>
 </body>
 </html>
